# Ai-Driven-Sales

./: .gitattributes  .gitignore  README.md  start.ps1  stop.ps1
backend/: .env.example  README.md  livekit_sales_agent.py  pyproject.toml  start.ps1
backend/pipeline/: __init__.py  audio_devices.py  bootstrap.py  cuda_env.py  llm.py  plugins.py  scenarios.py  stt.py  tts.py
backend/pipeline/a2f/: __init__.py  client.py
backend/pipeline/a2f/proto/: __init__.py  nvidia_ace_a2f_v1.proto  nvidia_ace_a2f_v1_pb2.py  nvidia_ace_a2f_v1_pb2_grpc.py  nvidia_ace_animation_id_v1_pb2.py  nvidia_ace_animation_id_v1_pb2_grpc.py  nvidia_ace_audio_v1_pb2.py  nvidia_ace_audio_v1_pb2_grpc.py  nvidia_ace_emotion_with_timecode_v1_pb2.py  nvidia_ace_emotion_with_timecode_v1_pb2_grpc.py  nvidia_ace_services_a2f_v1.proto  nvidia_ace_services_a2f_v1_pb2.py  nvidia_ace_services_a2f_v1_pb2_grpc.py  nvidia_ace_status_v1_pb2.py  nvidia_ace_status_v1_pb2_grpc.py
backend/pipeline/core/: audio_devices.py  bootstrap.py  config.py  cuda_env.py
backend/pipeline/kokoro/: plugin.py  processor.py
backend/pipeline/livekit/: agent.py  scenarios.py
backend/pipeline/ollama/: plugin.py  processor.py
backend/pipeline/whisper/: plugin.py  processor.py
