[project]
name = "sales-trainer-agent"
version = "0.1.0"
description = "Local voice sales trainer — Whisper, Qwen (Ollama), Kokoro"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "livekit-agents>=1.2.0",
    "livekit-plugins-silero>=1.0.0",
    "python-dotenv>=1.0.0",
    "faster-whisper>=1.0.0",
    "kokoro>=0.9.2",
    "transformers>=4.40,<5",
    "soundfile",
    "numpy",
    "httpx",
    "nvidia-cublas-cu11",
    "nvidia-cudnn-cu11",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.0.39",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
